--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "client-start": "cd client && npm run start",
-    "dev": "run-p start client-start",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build",
+    "dev-client-start": "cd client && npm run start",
+    "dev-server-start": "nodemon index.js",
+    "dev-start": "run-p dev-server-start dev-client-start",
+    "dev-install": "npm install && cd client && npm install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5"
   }
 }
